--- a/Authentication/bin/src/main/resources/application.properties
+++ b/Authentication/bin/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=post-service
-server.port=8081
+spring.application.name=auth-service
+server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/post?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://localhost:3306/blog?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=root1
+spring.datasource.password=India@123
 
 spring.sql.init.mode=always
 
