--- a/Authentication/src/main/resources/application.properties
+++ b/Authentication/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=auth-service
-server.port=8080
+server.port=8082
 
 spring.datasource.url=jdbc:mysql://localhost:3306/blog?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=India@123
+spring.datasource.password=root1
 
 spring.sql.init.mode=always
 
