--- a/Blog/src/main/resources/application.properties
+++ b/Blog/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/post?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root1
 
 spring.sql.init.mode=always
 
